@@ -60,7 +60,7 @@ del _ADVANCED_FACES
 
 RANDOM_TICK_RANGE = 2
 
-USE_MISSING_TEXTURES_ON_MISS_TEXTURE = True
+USE_MISSING_TEXTURES_ON_MISS_TEXTURE = False
 
 CPU_USAGE_REFRESH_TIME = 0.8
 
