@@ -8,6 +8,8 @@ changelog of master branch
     - new commands: /clone, /tell, /replaceitem, /gamerule
     - added multipart-block-model support
     - added generator code for creating BoundingBox from BlockState
+    - BoxModels will now rotate properly relative to middle of block, not only changing textures
+    - added new blocks: fences
     fixed bugs:
         - various exceptions from left-over things in the registry & slot changes from last snapshot
         - various issues with slot drawing
